<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="200dp"
                android:src="@drawable/restaurant"
                android:layout_marginBottom="14dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:layout_marginBottom="14dp"
                android:layout_gravity="center"
        />

        <Button
                android:id="@+id/btn_show_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_menu"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
        />

        <Button
                android:id="@+id/btn_show_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_order"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
        />


    </LinearLayout>

</LinearLayout>