<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_marginBottom="14dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
        />

        <ListView
                android:id="@+id/list_view_order"
                android:layout_width="300dp" android:layout_height="250dp"
                  android:layout_marginLeft="50dp"
                  android:layout_marginRight="50dp"
                  android:layout_marginBottom="14dp"
        />

        <ImageView
                android:id="@+id/img_cart"
                android:layout_width="250dp" android:layout_height="250dp"
                android:padding="24dp"
                android:src="@drawable/shopping_cart" android:visibility="gone"
        />

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btn_clear_order"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_order"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
            />

            <Button
                    android:id="@+id/btn_set_order"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/new_order"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
            />
        </LinearLayout>


        <Button
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
        />


    </LinearLayout>

</LinearLayout>